fg_sg.tf
resource "aws_security_group" "ecs"{
          name = "ecs"
          description = "Allow traffic for ecs"
          vpc_id = aws_vpc.default.id
          ingress {
                from_port = 0
                to_port = 65535
                protocol = "tcp"
                cidr_blocks = [var.public_subnet1_cidr,var.public_subnet1_cidr]
          }
          ingress {
                from_port = 0
                to_port = 65535
                protocol = "tcp"
                cidr_blocks = [var.private_subnet1_cidr,var.private_subnet1_cidr]
          }
          egress {
                from_port = 0
                to_port = 0
                protocol = "-1"
                cidr_blocks = ["0.0.0.0/0"]
          }
}

resource "aws_security_group" "alb"{
          name = "alb"
          description = "Allow traffic for alb"
          vpc_id = aws_vpc.default.id
          ingress {
                from_port = 80
                to_port = 80
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
          }
          egress {
                from_port = 0
                to_port = 0
                protocol = "-1"
                cidr_blocks = ["0.0.0.0/0"]
          }
}
